updated bundle, fixed scrollbar issue

--- a/static/main.scss
+++ b/static/main.scss
@@ -25,7 +25,7 @@ CSS formatting:
 
 .playlistContentContainer
 {
-    overflow-y: scroll;
+    overflow: auto;
 
     height: calc(100vh - (#{globalVars.$topBarTotalHeight} + 108px)); /* whole screen minus header and footer */
     width: 100vw;
